fix: gap between prod1

--- a/app/[locale]/catalog/sub-catalog/Sub-catalog.module.css
+++ b/app/[locale]/catalog/sub-catalog/Sub-catalog.module.css
@@ -94,7 +94,7 @@ letter-spacing: -0.5px; /* трохи ближче букви одна до од
     display: flex;
     text-align: center;
     padding: 5px;
-    width: 142px;
+    width: 140px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     border-radius: 10px;
 }
